--- a/example.config.json
+++ b/example.config.json
@@ -1,8 +1,8 @@
 {
   "ip": "10.0.0.2",
-  "hue": [0, 360],
-  "saturation": [100, 100],
-  "brightness": [100, 100],
+  "hue": [[0, 360]],
+  "saturation": [[100, 100]],
+  "brightness": [[100, 100]],
   "minHueDifference": 0,
   "nextState": {
     "transitionPeriod": 15,
