--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --quiet --watch ./config.json index.js"
+    "start": "nodemon --quiet --watch ./ index.js"
   },
   "author": "Justin Lowery",
   "license": "ISC",
   "dependencies": {
+    "color-convert": "^1.9.3",
     "nodemon": "^1.18.7",
+    "palette": "^0.1.1",
+    "readdirp": "^2.2.1",
     "tplink-smarthome-api": "^0.23.0"
   }
 }
